source/blender/blenkernel/BKE_collision.h
@@ -125,7 +125,10 @@ void bvhtree_update_from_mvert(BVHTree *bvhtree,
 
 // move Collision modifier object inter-frame with step = [0,1]
 // defined in collisions.c
-void collision_move_object(struct CollisionModifierData *collmd, float step, float prevstep);
+void collision_move_object(struct CollisionModifierData *collmd,
+                           const float step,
+                           const float prevstep,
+                           const bool moving_bvh);
 
 void collision_get_collider_velocity(float vel_old[3],
                                      float vel_new[3],
